Stop modal from going off-screen

--- a/src/main/resources/static/subject-review__options-dropdown.css
+++ b/src/main/resources/static/subject-review__options-dropdown.css
@@ -79,6 +79,8 @@
     left: 50%;
     transform: translate(-50%, -50%);
     background-color: #fefefe;
+    max-height: 90vh;
+    overflow-y: scroll;
     width: 90%;
 }
 
